Refactor overlay, session handling & Add initial upload UI
